- Font chooser for configuring the font settings
- Option to add audio object to playlist after current audio object
- Context panel redesign
- Gui theme can be changed without restart
- Allow repository load in background
- Allow reordering of playlist tabs
- Cover navigator window should be resizable
- New lyric engine using www.winampcn.com (Patch by Taylor Tang)
- INTERNAL: Avoid unnecessary refresh view operations
- INTERNAL: Share actions between play list and navigation tree and table
- INTERNAL: Refactoring of play list
- INTERNAL: Update search indexes only if user is going to perform a search
- INTERNAL: Don't update navigation table if it's not visible
- INTERNAL: Statistics refactoring [2875945]
- INTERNAL: Write repository to disk when closing application only if repository has been modified or refreshed
- INTERNAL: Write favorites to disk when closing application only if favorites have been modified
- INTERNAL: Write radio list to disk when closing application only if have been modified
- INTERNAL: Write podcast list to disk when closing application only if have been modified
- INTERNAL: Write playlist contents to disk when closing application only if have been modified
- FIX: Deleting many files from device freezes aTunes gui for some seconds [2855962]
- FIX: LyricWiki engine returned lyrics with URLs
- FIX: Opening web browser does not work on Ubuntu
- FIX: Validate repository content when loading it (patch from Laurent Cathala)
- FIX: Podcast file renaming is not possible [2897134]

aTunes 1.13.6
-------------
- FIX: ClassCastException when stopping radios/podcast feed entries
- INTERNAL: Updated Lyricsfly URL

aTunes 1.13.5
-------------
- FIX: MPlayer priority on Windows should be higher (patch by Ray Barlow)
- FIX: Windows Vista/7 ready application icons
- FIX: Show play list information enabled for more than one audio object [2786446]
- FIX: Sort by file name option sorts audio object in folder view in wrong order [2807803]