@@ -42,6 +42,7 @@ import net.sourceforge.atunes.gui.views.dialogs.RepositoryProgressDialog;
 import net.sourceforge.atunes.gui.views.dialogs.ReviewImportDialog;
 import net.sourceforge.atunes.kernel.ControllerProxy;
 import net.sourceforge.atunes.kernel.Handler;
+import net.sourceforge.atunes.kernel.Kernel;
 import net.sourceforge.atunes.kernel.actions.Actions;
 import net.sourceforge.atunes.kernel.actions.ConnectDeviceAction;
 import net.sourceforge.atunes.kernel.actions.ExportAction;
@@ -1067,5 +1068,14 @@ public final class RepositoryHandler extends Handler implements LoaderListener, 
 	 */
 	protected static Logger getRepositoryHandlerLogger() {
 		return getLogger();
+	}
+	
+	/**
+	 * Returns folder where repository configuration is stored
+	 * @return
+	 */
+	public String getRepositoryConfigurationFolder() {
+		String customRepositoryConfigFolder = SystemProperties.getCustomRepositoryConfigFolder();
+		return customRepositoryConfigFolder != null ? customRepositoryConfigFolder : SystemProperties.getUserConfigFolder(Kernel.DEBUG);
 	}
 }
