@@ -24,6 +24,7 @@
 - Allow reordering of playlist tabs
 - Cover navigator window should be resizable
 - New lyric engine using www.winampcn.com (Patch by Taylor Tang)
+- New option to store repository configuration in a custom folder
 - INTERNAL: Avoid unnecessary refresh view operations
 - INTERNAL: Share actions between play list and navigation tree and table
 - INTERNAL: Refactoring of play list
